# Go2-Resilient-Inspector

./: .gitignore  HAL_DESIGN.md  README.md
.devcontainer/: devcontainer.json
reports/: inspection_report.json  inspection_report.md
scripts/: inject_fault.sh  restore_sensors.sh
src/go2_bringup/: CMakeLists.txt  package.xml
src/go2_bringup/config/: nav2_params.yaml
src/go2_bringup/launch/: gazebo_simple.launch.py  inspection.launch.py  inspection_mission.launch.py
src/go2_bringup/models/room/: model.config  model.sdf
src/go2_bringup/models/room/meshes/: room.mtl
src/go2_bringup/worlds/: inspection_world.world
src/go2_hal/: CMakeLists.txt  package.xml
src/go2_hal/include/go2_hal/: go2_hal_node.hpp
src/go2_hal/src/: go2_hal_node.cpp
src/go2_health_monitor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/go2_health_monitor/go2_health_monitor/: topic_health_monitor.py
src/go2_interfaces/: CMakeLists.txt  package.xml
src/go2_interfaces/msg/: CanFrame.msg  FaultEvent.msg  InspectionResult.msg
src/go2_localization/: CMakeLists.txt  package.xml
src/go2_localization/config/: ekf.yaml
src/go2_mission/: CMakeLists.txt  package.xml
src/go2_mission/behavior_trees/: inspection_mission.xml
src/go2_mission/config/: mission_params.yaml
src/go2_mission/src/: mission_bt_node.cpp
src/go2_perception/: CMakeLists.txt  package.xml  setup.py
src/go2_perception/go2_perception/: perception_node.py
src/go2_report/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/go2_report/go2_report/: inspection_report_gen.py
src/go2_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/go2_sim/go2_sim/: lidar_sim_node.py  sim_machine_emulator.py
src/go2_teleop/: CMakeLists.txt  package.xml
src/go2_teleop/src/: joy_teleop_node.cpp
src/robots/configs/go1_config/: CMakeLists.txt  package.xml
