<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_mission</name>
  <version>0.1.0</version>
  <description>BehaviorTree.CPP v4 mission orchestrator. Implements waypoint patrol and graceful degradation when sensor faults are detected.</description>
  <maintainer email="apandrek@asu.edu">Asrith Pandreka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>go2_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
