<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go1_config</name>
  <version>0.1.0</version>
  <description>Unitree Go1 configuration for champ quadruped controller.</description>
  <maintainer email="apandrek@asu.edu">Asrith Pandreka</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
